--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,3 +16,7 @@ jobs:
     steps:
     - name: hello-world 
       run: echo 'Hello World'
+    - name: 'tell-me-date'
+      run: date
+    - name: 'list-dir'
+      run: ls
